JT-5121 - mobile and desktop split code.  some replication - breadcrumbs on mobile not aligning was driving me crazy so I fixed it.

--- a/app/assets/stylesheets/components/_breadcrumbs.scss
+++ b/app/assets/stylesheets/components/_breadcrumbs.scss
@@ -2,7 +2,10 @@
   background-color: $blue-darker;
   color: $gray-dark;
   padding: $spacing-medium 0;
-
+  @media (max-width: 991px) {
+    padding: $spacing-small 0;
+    margin-top: 10px;
+  }
   a {
    color: $white;
   }
