--- a/app/assets/stylesheets/school_profiles/_school_profile_sticky_cta.scss
+++ b/app/assets/stylesheets/school_profiles/_school_profile_sticky_cta.scss
@@ -23,11 +23,27 @@ $cta_icon_active_color: #2282b0; // Medium GS Blue
     z-index: 10;
   }
   &.blue-background {
+    //opacity: 0.95;
     background-image: image_url('school_profiles/hero_bg.jpg');
     border-radius: 0 0 2px 2px;
   }
   &.dn {
     display: none;
+  }
+  &.desktop_dn {
+    display:none;
+  }
+  @media (max-width: 991px) {
+    &.blue-background {
+      width:100%;
+      border-top: solid 1px $cta_button_border;
+    }
+    &.mobile_dn{
+      display:none;
+    }
+    &.desktop_dn {
+      display:block;
+    }
   }
 }
 
@@ -74,31 +90,51 @@ $cta_icon_active_color: #2282b0; // Medium GS Blue
         }
       }
     }
+    .owly_size {
+      width: 39px;
+      height: 43px;
+    }
   }
 
   @media (max-width: 991px) {
-    .cta-button {
+    .cta-four-buttons{
+      width: 25%;
+    }
+    .cta-three-buttons{
       width: 33%;
+    }
+    .cta-button {
       height: 50px;
-      float: left;
       text-align: center;
       padding-top: 10px;
       margin:auto;
+      background-image: image_url('school_profiles/hero_bg.jpg');
 
       a > div {
         vertical-align: top;
         display:inline-block;
+      }
+      .owly_size {
+        width: 33px;
+        height: 36px;
       }
     }
 
     &.cta-container {
       width: 100%;
       height: 50px;
-      position: fixed;
-      bottom: 0px;
+      position: relative;
+      top: 0px;
       clear: both;
       left:0px;
-      z-index : 1;
+      z-index : 10;
+    }
+    .cta-rating {
+      display:none;
+    }
+
+    .cta-title {
+      display:none;
     }
   }
 }
